# action-pylint

./: .prettierignore  README.md  action-pylint.sublime-project  action.yml
.github/workflows/: CI.yml  tests.yml
tests/: .coverage  pyproject.toml
tests/tests/: test_src.py
